# evalverse

./: .env_sample  .gitignore  .gitmodules  .pre-commit-config.yaml  README.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: 1-bug-report.yml  3-new-eval-request.yml  4-documentation-improve.yml
contribution/: CONTRIBUTING.md
evalverse/: README.md  __init__.py  connector.py  evaluator.py  reporter.py  slack_bot.py  utils.py
evalverse/tests/: test_evaluator.py  test_reporter.py  test_reproducibility.py
examples/: 01_basic_usage.ipynb  02_advanced_usage.ipynb  README.md
examples/db/: score_df.csv
examples/db/scores/: table_20240402_105011.csv
examples/results/Llama-2-7b-chat-hf/eq_bench/: benchmark_results.csv  raw_results.json
examples/results/Llama-2-7b-chat-hf/h6_en/: arc_challenge_25.json  gsm8k_5.json  hellaswag_10.json  mmlu_5.json  truthfulqa_mc2_0.json  winogrande_5.json
examples/results/Llama-2-7b-chat-hf/ifeval/: eval_results_loose.jsonl  eval_results_strict.jsonl  output.jsonl  scores.txt
examples/results/Llama-2-7b-chat-hf/mt_bench/: scores.txt
examples/results/SOLAR-10.7B-Instruct-v1.0/eq_bench/: benchmark_results.csv  raw_results.json
examples/results/SOLAR-10.7B-Instruct-v1.0/h6_en/: arc_challenge_25.json  hellaswag_10.json  mmlu_5.json
examples/results/SOLAR-10.7B-Instruct-v1.0/ifeval/: eval_results_loose.jsonl  eval_results_strict.jsonl  output.jsonl  scores.txt
examples/results/SOLAR-10.7B-Instruct-v1.0/mt_bench/: scores.txt
tutorials/: 01_basic_usage.ipynb
(+7 files in other folders)
